--- a/xueer.html
+++ b/xueer.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>学而</title>
-    <link rel="stylesheet" href="xueer.css">   
+    <link rel="stylesheet" href="xueer_inlineblock.css">   
 </head>
 <body>
-    <div class="header-container">
-        <div class="header">
+    <div class="header">
+        <div class="header-center">
             <div class="header-left">
                 <img class="logo" src="logo.png" alt="">
                 <div class="logo-text">学而</div>
@@ -23,8 +23,8 @@
                 </div>
             </div>
             <div class="search-container">
-                <div class="search"><input class="s-ipt" value="" maxlength="255"></div>
-                <div class="img-container"></div><img class="searchimg">
+                <input class="s-ipt" value="" maxlength="255">
+                <div class="img-container"><img class="searchimg" src="search.png"></div>
             </div>
             <img class="peoplephoto" src="people-photo1.jpeg">
             <div class="signout">退出</div>
@@ -38,7 +38,7 @@
                     <div class="summeay">公</div>
                     <div class="class-details">
                         <ul>
-                            <li>界面与设计应用<br>房子</li>
+                            <li>界面与设计应用<br><span>房子</span></li>
                             <li>java程序编程<br>赵三金</li>
 			                 <li>设计师的自我修养<br>分享课程</li>
                         </ul>
@@ -82,63 +82,54 @@
             <div class="hotclass">
                 <div class="module-title">最热课程动态</div>
                 <div class="module-introduction">精心为您推荐最佳口碑课程排行NO.1-NO.5</div>
-                <div class="module-container">
-                    <div class="rectangle1">
-                        <div class="lessonname1">常勇<br>《化学生活》</div>
-                    </div>
-                    <div class="rectangle2">01</div>
-                    <div class="rectangle1">
-                            <div class="lessonname1">李达<br>《大学生语文》</div>
-                    </div>
-                     <div class="rectangle2">02</div>
-                    <div class="rectangle1">
-                            <div class="lessonname1">张勇<br>《java语言程序设计》</div>
-                    </div>
-                     <div class="rectangle2">03</div>
-                     <div class="rectangle1">
-                             <div class="lessonname1">苏燕<br>《视觉语言》</div>
-                     </div>
-                    <div class="rectangle2">04</div>
-                    <div class="rectangle1">
-                            <div class="lessonname1">张国<br>《计算机组装》</div>
-                    </div>
-                     <div class="rectangle2">05</div>
-                </div>
+              <table>
+                    <tr>
+                        <td class="rectangle1"><div>常勇<br>《化学生活》</div></td>
+                        <td class="rectangle2"><u>02</u></td>
+                        <td class="rectangle1"><div>张勇<br>《java语言程序设计》</div></td>
+                        <td  class="rectangle2"><u>04</u></td>
+                        <td class="rectangle1"><div>张国<br>《计算机组装》</div></td>
+                    </tr>
+                    <tr>
+                            <td class="rectangle2"><u >01</u></td>
+                            <td class="rectangle1"><div ><div>李达<br>《大学生语文》</div></td>
+                            <td class="rectangle2"><u>03</u></td>
+                            <td class="rectangle1"><div>苏燕 <br>《视觉语言》</div></td>
+                            <td class="rectangle2"><u>05</u></td>
+                        </tr>
+                </table>
             </div>
+            
             <div class="guess-like">
                 <div class="module-title">猜你喜欢课程</div>
                  <div class="module-introduction">根据您的浏览记录，推荐相似课程列表</div>
                  <div class="module-container2">
                     <div class="lesson-content">
                          <div class="rabbit1"><img   src="rabbit1.png" alt=""></div>
-                        <div class="lessonname2">《毛泽东思想》 </div>
-                        <div class="teachername2">赵三金</div>
+                        <div class="lessonname2">《毛泽东思想》<br>赵三金 </div>
                     </div>
                 <div class="lesson-content">
                         <div class="rabbit1"><img   src="rabbit1.png" alt=""></div>
-                        <div class="lessonname2">《邓小平理论》 </div>
-                        <div class="teachername2">胡一薇</div>
+                        <div class="lessonname2">《邓小平理论》 <br>胡一唯</div>
                 </div>
                 <div class="lesson-content">
                         <div class="rabbit1"><img  src="rabbit1.png" alt=""></div>
-                        <div class="lessonname2">《科学发展观》 </div>
-                        <div class="teachername2">梁非凡</div>
+                        <div class="lessonname2">《科学发展观》<br>梁非凡 </div>
                 </div>
                 <div class="lesson-content">
                           <div class="rabbit1"><img   src="rabbit1.png" alt=""></div>
-                        <div class="lessonname2">《三个代表》 </div>
-                        <div class="teachername2">韩一尾</div>
+                        <div class="lessonname2">《三个代表》<br>韩一尾 </div>
                 </div>
                 </div>
         </div>
     </div>
-    <div class="footer-container">
-        <div class="footer">
-            <div class="rabbit2"><img  src="rabbit2.png"></div>
-            <div class="xixixixi">
-                <div class="muxistdio">MUXI  STUDIO</div>
-                <div class="school">华中师范大学木犀团队</div>
+    </div>
+    <div class="footer">
+            <div class="footer-center">
+                <div class="rabbit2"><img  src="rabbit2.png"></div>
+                <div class="xixixixi">
+                    <div class="muxistdio">MUXI  STUDIO</div>
+                    <div class="school">华中师范大学木犀团队</div>
+                </div>
             </div>
-        </div>
-    </div>
 </body>
